z-index drawer fixed

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1243,6 +1243,7 @@
 
 	&__top {
 		position: absolute;
+		z-index: 2;
 		top: 0;
 		left: 0;
 		width: 100%;
@@ -1576,6 +1577,7 @@
 
 	&__bottom {
 		position: absolute;
+		z-index: 2;
 		bottom: 0;
 		left: 0;
 		width: 100%;
@@ -1674,6 +1676,7 @@
 
 	&__top {
 		position: absolute;
+		z-index: 2;
 		top: 0;
 		left: 0;
 		width: 100%;
@@ -1870,6 +1873,7 @@
 
 	&__bottom {
 		position: absolute;
+		z-index: 2;
 		bottom: 0;
 		left: 0;
 		width: 100%;
@@ -1947,6 +1951,7 @@
 
 	&__top {
 		position: absolute;
+		z-index: 2;
 		top: 0;
 		left: 0;
 		width: 100%;
@@ -2103,6 +2108,7 @@
 
 	&__bottom {
 		position: absolute;
+		z-index: 2;
 		bottom: 0;
 		left: 0;
 		width: 100%;
